src/test/ui/issues/issue-36638.stderr
error: expected identifier, found keyword `Self`
  --> $DIR/issue-36638.rs:3:12
   |
LL | struct Foo<Self>(Self);
   |            ^^^^ expected identifier, found keyword

error: expected identifier, found keyword `Self`
  --> $DIR/issue-36638.rs:6:11
   |
LL | trait Bar<Self> {}
   |           ^^^^ expected identifier, found keyword

error: aborting due to 2 previous errors

